Add then() functions

--- a/index.html
+++ b/index.html
@@ -12,9 +12,14 @@
       fetch(
         "https://api.giphy.com/v1/gifs/translate?api_key=VxUer0xtVLrYYZmdUjfSCXegU9fatz9M&s=cats",
         { mode: "cors" }
-      ).then(function (response) {
-        console.log(response.json());
-      });
+      )
+        .then(function (response) {
+          return response.json();
+          console.log(response.json());
+        })
+        .then(function (response) {
+          console.log(response);
+        });
     </script>
   </body>
 </html>
