--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           console.log(response.json());
         })
         .then(function (response) {
-          console.log(response.data.images.original.url);
+          img.src = response.data.images.original.url;
         });
     </script>
   </body>
