--- a/index.html
+++ b/index.html
@@ -13,11 +13,23 @@
       <input type="text" name="tag" id="tag" />
       <button id="search-tag-button">Search for tag</button>
     </div>
-    <div>
-      <img src="#" alt="" />
+    <div id="image-container">
+      <!-- <img src="#" alt="" id="fetched-image" /> -->
     </div>
+
     <script>
-      const img = document.querySelector("img");
+      function updateImage(url) {
+        let img = document.querySelector("#fetched-image");
+        if (img) {
+          img.remove();
+        }
+
+        img = document.createElement("img");
+        img.id = "fetched-image";
+        img.src = url;
+
+        imageContainer.appendChild(img);
+      }
 
       const fetchButton = document.querySelector("#fetch-button");
       fetchButton.addEventListener("click", () => {
@@ -32,13 +44,13 @@
           })
           .then(function (object) {
             const url = object.data.images.original.url;
-            console.log(url);
-            img.src = url;
+            updateImage(url);
           });
       });
 
       const tagElement = document.querySelector("#tag");
       const searchTagButton = document.querySelector("#search-tag-button");
+      const imageContainer = document.querySelector("#image-container");
 
       searchTagButton.addEventListener("click", () => {
         const tag = tagElement.value;
@@ -54,8 +66,7 @@
           })
           .then(function (object) {
             const url = object.data.images.original.url;
-            console.log(url);
-            img.src = url;
+            updateImage(url);
           });
       });
     </script>
