--- a/index.html
+++ b/index.html
@@ -13,9 +13,7 @@
       <input type="text" name="tag" id="tag" />
       <button id="search-tag-button">Search for tag</button>
     </div>
-    <div id="image-container">
-      <!-- <img src="#" alt="" id="fetched-image" /> -->
-    </div>
+    <div id="image-container"></div>
 
     <script>
       const tagElement = document.querySelector("#tag");
@@ -23,10 +21,7 @@
       const imageContainer = document.querySelector("#image-container");
 
       function updateImage(url) {
-        let img = document.querySelector("#fetched-image");
-        if (img) {
-          img.remove();
-        }
+        clearContainer(imageContainer);
 
         img = document.createElement("img");
         img.id = "fetched-image";
@@ -35,17 +30,35 @@
         imageContainer.appendChild(img);
       }
 
+      function showErrorImage() {
+        const div = document.createElement("div");
+        div.textContent = "No images found";
+
+        imageContainer.appendChild(div);
+      }
+
+      function clearContainer(container) {
+        while (container.firstChild) {
+          const lastChild = container.lastChild;
+          container.removeChild(lastChild);
+        }
+      }
+
       function fetchImage(tag = "cats") {
         fetch(
-          `https://api.giphy.com/v1/gifs/random?api_key=XLq1JPnenhPb0EFgYngVWwaU1HFyTJfW&tag=${tag}`,
+          `https://api.giphy.com/v1/gifs/random?api_key=VxUer0xtVLrYYZmdUjfSCXegU9fatz9M&tag=${tag}`,
           { mode: "cors" }
         )
           .then(function (response) {
             return response.json();
           })
           .then(function (object) {
-            const url = object.data.images.original.url;
-            updateImage(url);
+            if (object.data.length === 0) {
+              showErrorImage();
+            } else {
+              const url = object.data.images.original.url;
+              updateImage(url);
+            }
           })
           .catch(function (error) {
             console.error(error);
