Catch responses that are not ok

--- a/index.html
+++ b/index.html
@@ -46,11 +46,16 @@
 
       function fetchImage(tag = "cats") {
         fetch(
-          `https://api.giphy.com/v1/gifs/random?api_key=VxUer0xtVLrYYZmdUjfSCXegU9fatz9M&tag=${tag}`,
+          // `https://api.giphy.com/v1/gifs/random?api_key=VxUer0xtVLrYYZmdUjfSCXegU9fatz9M&tag=${tag}`,
+          `https://api.giphy.com/v1/gifs/random?api_key=11111111112222222222333333333344&tag=${tag}`,
           { mode: "cors" }
         )
           .then(function (response) {
-            return response.json();
+            if (response.ok) {
+              return response.json();
+            } else {
+              throw new Error(`Error: ${response.status}`);
+            }
           })
           .then(function (object) {
             if (object.data.length === 0) {
