--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
       }
 
       function showErrorImage() {
+        clearContainer(imageContainer);
+
         const div = document.createElement("div");
         div.textContent = "No images found";
 
