--- a/index.html
+++ b/index.html
@@ -46,29 +46,28 @@
         }
       }
 
-      function fetchImage(tag = "cats") {
-        fetch(
+      async function fetchImage(tag = "cats") {
+        const response = await fetch(
           `https://api.giphy.com/v1/gifs/random?api_key=VxUer0xtVLrYYZmdUjfSCXegU9fatz9M&tag=${tag}`,
           { mode: "cors" }
-        )
-          .then(function (response) {
-            if (response.ok) {
-              return response.json();
-            } else {
-              throw new Error(`Error: ${response.status}`);
-            }
-          })
-          .then(function (object) {
-            if (object.data.length === 0) {
-              showErrorImage();
-            } else {
-              const url = object.data.images.original.url;
-              updateImage(url);
-            }
-          })
-          .catch(function (error) {
-            console.error(error);
-          });
+        );
+        if (response.ok) {
+          response
+            .json()
+            .then(function (object) {
+              if (object.data.length === 0) {
+                showErrorImage();
+              } else {
+                const url = object.data.images.original.url;
+                updateImage(url);
+              }
+            })
+            .catch(function (error) {
+              console.error(error);
+            });
+        } else {
+          throw new Error(`Error: ${response.status}`);
+        }
       }
 
       const fetchButton = document.querySelector("#fetch-button");
