--- a/index.html
+++ b/index.html
@@ -47,26 +47,25 @@
       }
 
       async function fetchImage(tag = "cats") {
-        const response = await fetch(
-          `https://api.giphy.com/v1/gifs/random?api_key=VxUer0xtVLrYYZmdUjfSCXegU9fatz9M&tag=${tag}`,
-          { mode: "cors" }
-        );
-        if (response.ok) {
-          response
-            .json()
-            .then(function (object) {
-              if (object.data.length === 0) {
-                showErrorImage();
-              } else {
-                const url = object.data.images.original.url;
-                updateImage(url);
-              }
-            })
-            .catch(function (error) {
-              console.error(error);
-            });
-        } else {
-          throw new Error(`Error: ${response.status}`);
+        try {
+          const response = await fetch(
+            // `https://api.giphy.com/v1/gifs/random?api_key=111&tag=${tag}`,
+            `https://api.giphy.com/v1/gifs/random?api_key=VxUer0xtVLrYYZmdUjfSCXegU9fatz9M&tag=${tag}`,
+            { mode: "cors" }
+          );
+          if (response.ok) {
+            const object = await response.json();
+            if (object.data.length === 0) {
+              showErrorImage();
+            } else {
+              const url = object.data.images.original.url;
+              updateImage(url);
+            }
+          } else {
+            throw new Error(`Error: ${response.status}`);
+          }
+        } catch (error) {
+          console.error(error);
         }
       }
 
